[package]
name = "forwarder"
version = "0.4.0"
edition = "2021"
description = "fast packet forwarder"
license = "MIT"
repository = "https://github.com/itsabgr/forwarder/"

[dependencies]
chacha20poly1305 = "0.10.1"
rand = "0.8.5"
sha2 = "0.10.2"
clap = { version = "3.0", features = ["derive"] }
rmp = "0.8.11"
nacl = "0.5.3"
num_cpus = "1.13.1"
core_affinity = "0.5.10"